# Shorts

./: LICENSE  README.md  TODO.md  build_pyinstaller.py  pyproject.toml  requirements.txt  shortssplit.py
core/: __init__.py  ffmpeg_handler.py  shorts.py  subtitle_utils.py  utils.py  whisper_wrapper.py
tests/: test_ffmpeg_handler.py  test_subtitle_utils.py  test_utils.py
ui/: mainwindow.py
website/: README.md  package.json  tailwind.config.js
website/app/: layout.tsx  page.tsx
website/components/: Feature.tsx
